Add initial cv website files

--- a/contact me.html
+++ b/contact me.html
@@ -7,7 +7,7 @@
     <body>
      <h1>My Contact Details</h1>
      <h4>If you like to contact me, details are....</h4>
-     <p>Place:Manjeri</p>
+     <p>Place:Ramanattukara</p>
      <p>Mobile no:7902468678</p>
      <p>E Mail:manjunathtpmji@gmail.com</p>
      <hr>
