--- a/contact me.html
+++ b/contact me.html
@@ -15,12 +15,12 @@
      <p>E Mail:manjunathtpmji@gmail.com</p>
      <hr>
      <form action="mailto:manjunathtpmji@gmail.com" method="post" enctype="text/plain">
-        <label>Your Name:</label>
+        <label>Your Name:</label><br>
         <input type="text" name="yourName" value=""><br>
-        <label>Your EMail:</label>
+        <label>Your EMail:</label><br>
         <input type="email" name="yourEMail" value=""><br>
-        <label>Your Message:</label>
-        <textarea name="yourMessage" cols="30" rows="10"></textarea>
+        <label>Your Message:</label><br>
+        <textarea name="yourMessage" cols="30" rows="10"></textarea><br>
         <input type="submit" name="">
      </form>
     </body>
